<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"
    android:background="@color/main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="422dp"
            android:layout_height="126dp"
            android:src="@drawable/header_welcome" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:fontFamily="@font/roboto"
            android:text="@string/header_welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:id="@+id/frame_1"
            android:layout_width="417dp"
            android:layout_height="95dp"
            android:layout_marginTop="10dp"
            android:background="@color/main"
            android:elevation="10dp">

            <SeekBar
                android:id="@+id/ageBar"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="16dp"
                android:background="#234171"
                android:progressTint="#FFFFFF"
                android:thumbTint="#326DC6"
                android:thumbTintMode="src_in"
                android:verticalScrollbarPosition="defaultPosition"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="68dp"
                android:fontFamily="@font/roboto"
                android:text="@string/header_w4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="414dp"
            android:layout_height="129dp"
            android:layout_marginTop="10dp"
            android:background="@color/main"
            android:elevation="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/roboto"
                android:text="@string/header_w3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <SeekBar
                android:id="@+id/moneyBar"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="45dp"
                android:background="#234171"
                android:progressTint="#FFFFFF"
                android:thumbTint="#326DC6"
                android:thumbTintMode="src_in"
                android:verticalScrollbarPosition="defaultPosition"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_10"
            android:layout_width="414dp"
            android:layout_height="129dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:background="@color/main"
            android:clipToOutline="true"
            android:elevation="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/roboto"
                android:text="@string/header_w2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <SeekBar
                android:id="@+id/graduationBar"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="45dp"
                android:background="#234171"
                android:progressTint="#FFFFFF"
                android:thumbTint="#326DC6"
                android:thumbTintMode="src_in"
                android:verticalScrollbarPosition="defaultPosition"
                android:visibility="visible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame"
            android:layout_width="432dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/main"
            android:clipToOutline="true"
            android:elevation="10dp" />

        <Button
            android:id="@+id/next"
            android:layout_width="390dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/buttonclr"
            android:fontFamily="@font/roboto"
            android:text="@string/butn_confirm"
            android:textAlignment="center"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
